overall: fixed image sizing on firefox

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,5 @@
 #gesture-project-logo {
-  width: 50%;
+  width: 40vw;
   padding-right: 5%;
 }
 
@@ -9,11 +9,11 @@
 
 #dynata-project-logo {
   padding-left: 5%;
-  width: 55%;
+  width: 45vw;
 }
 
 #orion-project-logo {
-  width: 50%;
+  width: 40vw;
   padding-right: 5%;
 }
 
