--- a/styles/qualifications.css
+++ b/styles/qualifications.css
@@ -38,7 +38,7 @@
 }
 
 #planet-clipart {
-  width: 30%;
+  width: 25vw;
   margin-left: 10%;
 }
 
@@ -47,7 +47,7 @@
 }
 
 #web-dev-clipart {
-  width: 30%;
+  width: 25vw;
   margin-right: 10%;
 }
 
