--- a/styles/service.css
+++ b/styles/service.css
@@ -1,10 +1,10 @@
 #aceing-autism-logo {
-  width: 25%;
+  width: 20vw;
   margin-right: 5%;
 }
 
 #boys-and-girls-club-logo {
-  width: 30%;
+  width: 20vw;
   margin-left: 5%;
 }
 
