--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,7 +138,7 @@ ul {
 }
 
 #overview-headshot {
-  width: 35%;
+  width: 30vw;
   border: 3px #202020 double;
 }
 
